alter signin file to index

--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
         <input class="signup-confirmPassword" type="password" name="confirmPassword"  placeholder="CONFIRME PASSWORD" data-rules="required|equal">
         
         <input class="myButton input" type="submit" id="signup-btn-submit" value="Registrar">
-        <p>voltar para tela <a href="/signin.html">Login</a></p>    
+        <p>voltar para tela <a href="/index.html">Login</a></p>    
     </form>
   </div>
  <h1 class="error"></h1>
