if not logged in, play for login

--- a/generatePDF.html
+++ b/generatePDF.html
@@ -48,5 +48,6 @@
         </div>
   </div>
     <script src="./src/assets/js/generatePDF.js"></script>
+    <script src="./src/assets/js/logged.js"></script>
 </body>
 </html>
