--- a/searche.html
+++ b/searche.html
@@ -113,5 +113,6 @@
 	<script src="./src/assets/js/putForm.js"></script>
 	<script src="./src/assets/js/exitPage.js"></script>
 	<script src="./src/assets/js/logged.js"></script>
+	<script src="./src/assets/js/logged.js"></script>
 </body>
 </html>
