--- a/searche.html
+++ b/searche.html
@@ -11,14 +11,12 @@
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
-	<link rel="stylesheet" href="./src/assets/css/menu.css">
 </head>
-
 <body>
 	<div class="container">
 		<header>
 			<nav>
-				<ul class="menu">
+				<ul class="home">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" style="fill: #ffff;transform: msFilter"><path d="M3 13h1v7c0 1.103.897 2 2 2h12c1.103 0 2-.897 2-2v-7h1a1 1 0 0 0 .707-1.707l-9-9a.999.999 0 0 0-1.414 0l-9 9A1 1 0 0 0 3 13zm7 7v-5h4v5h-4zm2-15.586 6 6V15l.001 5H16v-5c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v5H6v-9.586l6-6z"></path></svg> <!--  icone -->
 					<li><a href="./home.html">Home</a></li>
 					<li><a href="./searche.html">Buscas</a></li>
@@ -26,93 +24,90 @@
 					<li><a href="./generatePDF.html">prontuarios</a></li>
 				</ul>
 			</nav>
-
-			<aside class="aside-padding">
-				<!-- <a href="#" class="config">configuração</a> -->
-				<input class="exit" type="button" value="Sair" onclick="exit()">
-			</aside>
-		</header>
-
-		<main>
-
-			<form class="flex-row-form reset-form" name="putForm"  method="put">
-
-				<div class="flex1-form">
-
-                    <label for="cpf">CPF:</label>
-					<input class="input-cpf" type="search" name="cpf" required placeholder="Consultar por CPF AQUI... pressione tab" id="cpf">
-
-					<label for="name_full">Nome completo:</label>
-					<input class="input-name" type="text" name="name" required id="name">
-
-					<label for="data_nascimento">Data de nascimento:</label>
-					<input class="input-nasc" type="text" name="nascimento" required id="nascimento">
-
-					<label for="name_mae">Nome da mãe:</label>
-					<input class="input-mae" type="text" name="mae" required id="mae">
-
-					<label for="bairro">Bairro:</label>
-					<input class="input-bairro" type="text" name="bairro" required id="bairro">
-
-					<label for="cep">CEP:</label>
-					<input class="input-cep" type="text" name="cep" required  maxlength="9" id="cep">
-
-					<label for="endereco">Endereço:</label>
-					<input class="input-endereco" type="text" name="endereco" required id="endereco">
-				</div>
-
-				<div class="flex2-form">
-                    <label for="sexo">Sexo:</label>
-					<input class="input-sexo" type="text" name="sexo" required id="sexo">
-
-					<label for="data_Emissao">Data de emissão:</label>
-					<input class="input-emissao" type="text" name="dataemissao" id="dataemissao">
-
-					<label for="RG">RG:</label>
-					<input class="input-rg" type="text" name="rg" required id="rg">
+<aside class="aside-padding">
+	<!-- <a href="#" class="config">configuração</a> -->
+	<input class="exit" type="button" value="Sair" onclick="exit()">
+</aside>
+</header>
 
 
-					<label for="cartao do sus">Cartão do sus:</label>
-					<input class="input-sus" type="text" name="sus" required id="sus">
+<form class="flex-row-form reset-form" name="putForm" method="put">
 
-					<label for="cidade">Cidade:</label>
-					<input class="input-cidade" type="text" name="cidade" required id="cidade">
+	<div class="flex1-form">
 
-					<label for="uf">UF:</label>
-					<input class="input-uf" type="text" name="uf" required id="uf">
+		<label for="cpf">CPF:</label>
+		<input class="input-cpf" type="search" name="cpf" required placeholder="Consultar por CPF AQUI... pressione tab"
+			id="cpf">
 
-					<label for="fone">Fone:</label>
-					<input class="input-fone" type="text" name="fone" required id="fone">
-				</div>
+		<label for="name_full">Nome completo:</label>
+		<input class="input-name" type="text" name="name" required id="name">
 
-				<div class="flex3-form">
-					<label for="obs">Descrição:</label>
-					<textarea class="input-descricao" name="descricao" cols="30" rows="17" required placeholder="Descrição do paciente" id="descricao"></textarea>
-				</div>
+		<label for="data_nascimento">Data de nascimento:</label>
+		<input class="input-nasc" type="text" name="nascimento" required id="nascimento">
 
-				<div class="flex4-form">
-					<input type="submit" class="input-submit" value="EDITAR" id="signin-btn-submit">
-				</div>
-			</form>
+		<label for="name_mae">Nome da mãe:</label>
+		<input class="input-mae" type="text" name="mae" required id="mae">
 
+		<label for="bairro">Bairro:</label>
+		<input class="input-bairro" type="text" name="bairro" required id="bairro">
 
-			<!-- <input type="button" value = "Refresh" onclick="reloadPage()" /> -->
-			
+		<label for="cep">CEP:</label>
+		<input class="input-cep" type="text" name="cep" required maxlength="9" id="cep">
 
-			<div id="result"></div>
-		</main>
-
-		<footer>
-			<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
-		</footer>
+		<label for="endereco">Endereço:</label>
+		<input class="input-endereco" type="text" name="endereco" required id="endereco">
 	</div>
 
-	<!-- <script src="./src/assets/js/homeRefreshToken.js"></script> -->
-	
-	<script src="./src/assets/js/getByCpf.js"></script>
-	<script src="./src/assets/js/putForm.js"></script>
-	<script src="./src/assets/js/exitPage.js"></script>
-	<script src="./src/assets/js/logged.js"></script>
-	<script src="./src/assets/js/logged.js"></script>
+	<div class="flex2-form">
+		<label for="sexo">Sexo:</label>
+		<input class="input-sexo" type="text" name="sexo" required id="sexo">
+
+		<label for="data_Emissao">Data de emissão:</label>
+		<input class="input-emissao" type="text" name="dataemissao" id="dataemissao">
+
+		<label for="RG">RG:</label>
+		<input class="input-rg" type="text" name="rg" required id="rg">
+
+
+		<label for="cartao do sus">Cartão do sus:</label>
+		<input class="input-sus" type="text" name="sus" required id="sus">
+
+		<label for="cidade">Cidade:</label>
+		<input class="input-cidade" type="text" name="cidade" required id="cidade">
+
+		<label for="uf">UF:</label>
+		<input class="input-uf" type="text" name="uf" required id="uf">
+
+		<label for="fone">Fone:</label>
+		<input class="input-fone" type="text" name="fone" required id="fone">
+	</div>
+
+	<div class="flex3-form">
+		<label for="obs">Descrição:</label>
+		<textarea class="input-descricao" name="descricao" cols="30" rows="17" required
+			placeholder="Descrição do paciente" id="descricao"></textarea>
+	</div>
+
+	<div class="flex4-form">
+		<input type="submit" class="input-submit" value="EDITAR" id="signin-btn-submit">
+	</div>
+</form>
+
+<p class="count"></p>
+
+<footer>
+	<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
+</footer>
+</div>
+
+
+<!-- <script src="./src/assets/js/homeRefreshToken.js"></script> -->
+<script src="./src/assets/js/allCount.js"></script>
+<script src="./src/assets/js/getByCpf.js"></script>
+<script src="./src/assets/js/putForm.js"></script>
+<script src="./src/assets/js/exitPage.js"></script>
+<script src="./src/assets/js/logged.js"></script>
+<script src="./src/assets/js/logged.js"></script>
 </body>
+
 </html>
