--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 	<!-- carrega página a cada 30 segundos -->
 	<!-- <meta http-equiv="refresh" content="30"> -->
 	<title>Document</title>
+	<!-- <link rel="stylesheet" href="./src/assets/css/reset.css"> -->
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
-	<link rel="stylesheet" href="./src/assets/css/reset.css">
 
 	<!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
 
