alter flex-submit

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
 				<input class="input-fone" type="text" name="fone" required placeholder="Fone">
 
 				<!-- button submit -->
-				<div class="flex3-submit">
+				<div class="flex-submit">
 					<input class="input-submit" type="submit" value="ENVIAR">
 				</div>
 			</div>
