--- a/home.html
+++ b/home.html
@@ -91,8 +91,7 @@
 				<label for="fone">Fone:</label>
 				<input class="input-fone" type="text" name="fone" required placeholder="Fone">
 
-				<!-- button submit -->
-				<div class="flex-submit">
+				<div class="flex3-submit">
 					<input class="input-submit" type="submit" value="ENVIAR">
 				</div>
 			</div>
