--- a/home.html
+++ b/home.html
@@ -91,7 +91,8 @@
 				<label for="fone">Fone:</label>
 				<input class="input-fone" type="text" name="fone" required placeholder="Fone">
 
-				<div class="flex3-submit">
+				<!-- button submit -->
+				<div class="submit-flex3">
 					<input class="input-submit" type="submit" value="ENVIAR">
 				</div>
 			</div>
