--- a/home.html
+++ b/home.html
@@ -92,7 +92,9 @@
 				<input class="input-fone" type="text" name="fone" required placeholder="Fone">
 
 				<!-- button submit -->
-					<input class="input-submit" type="submit" value="ENVIAR">
+				<div class="flex3-submit">
+					<button class="input-submit" type="submit">ENVIAR</button>
+				</div>
 			</div>
 		</form>
 	</div>
