--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
 
 				<!-- button submit -->
 				<div class="flex3-submit">
-					<button class="input-submit" type="submit">ENVIAR</button>
+					<input class="input-submit" type="submit" value="ENVIAR">
 				</div>
 			</div>
 		</form>
