--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 	<!-- carrega página a cada 30 segundos -->
 	<!-- <meta http-equiv="refresh" content="30"> -->
 	<title>Document</title>
-	<link rel="stylesheet" href="./src/assets/css/normalize.css">
+	<!-- <link rel="stylesheet" href="./src/assets/css/reset.css"> -->
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
 
 	<!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
@@ -92,9 +92,8 @@
 				<input class="input-fone" type="text" name="fone" required placeholder="Fone">
 
 				<!-- button submit -->
-				<div class="flex3-submit">
 					<input class="input-submit" type="submit" value="ENVIAR">
-				</div>
+
 			</div>
 		</form>
 	</div>
