--- a/searche.html
+++ b/searche.html
@@ -8,7 +8,7 @@
 	<!-- carrega página a cada 30 segundos -->
 	<!-- <meta http-equiv="refresh" content="30"> -->
 	<title>Document</title>
-	<!-- <link rel="stylesheet" href="./src/assets/css/reset.css"> -->
+	<link rel="stylesheet" href="./src/assets/css/reset.css">
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
 
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
