--- a/home.html
+++ b/home.html
@@ -98,6 +98,8 @@
 		</form>
 	</div>
 
+	<p class="count"></p>
+
 	<footer>
 		<span>Copyright <strong>Jorge Luiz</strong> © 2021-2022</span>
 	</footer>
