--- a/searche.html
+++ b/searche.html
@@ -17,17 +17,29 @@
 <body>
 	<div class="container">
 		<header>
-			<nav>
-				<ul class="home">
-					<li><a href="./home.html">Home</a></li>
-					<li><a href="./searche.html">Buscas</a></li>
-					<li><a href="./generatePDF.html">prontuarios</a></li>
-				</ul>
-			</nav>
-			<aside class="aside-padding">
-				<!-- <a href="#" class="config">configuração</a> -->
-				<input class="exit" type="button" value="Sair" onclick="exit()">
-			</aside>
+			<div class="container-header">
+				<nav>
+					<ul class="home">
+						<li><a href="./home.html">Home</a></li>
+						<li><a href="./searche.html">Buscas</a></li>
+						<li><a href="./generatePDF.html">prontuarios</a></li>
+					</ul>
+				</nav>
+
+				<!-- menu hamburguer -->
+				<div class="menu-section on">
+					<div class="menu-toggle">
+						<div class="one"></div>
+						<div class="two"></div>
+						<div class="three"></div>
+					</div>
+				</div>
+
+				<aside class="aside-padding">
+					<!-- <a href="#" class="config">configuração</a> -->
+					<input class="exit" type="button" value="Sair" onclick="exit()">
+				</aside>
+			</div>
 		</header>
 
 
