position of hamburguer

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 			<div class="container-header">
 
 				<!-- menu hamburguer -->
-				<div class="menu-section on">
+				<div class="menu-section ">
 					<div class="menu-toggle">
 						<div class="one"></div>
 						<div class="two"></div>
@@ -44,7 +44,6 @@
 		</header>
 
 		<form class="flex-row-form reset-form" name="formSend">
-
 			<div class="flex1-form">
 				<label for="name_full">Nome completo:</label>
 				<input class="input-name" type="text" name="name" required placeholder="Nome Completo">
@@ -76,7 +75,6 @@
 			</div>
 
 			<div class="flex2-form">
-
 				<label for="sexo">Sexo:</label>
 				<select class="input-sexo" name="sexo" type="text">
 					<option value="M">M</option>
