--- a/searche.html
+++ b/searche.html
@@ -18,13 +18,6 @@
 	<div class="container">
 		<header>
 			<div class="container-header">
-				<nav>
-					<ul class="home">
-						<li><a href="./home.html">Home</a></li>
-						<li><a href="./searche.html">Buscas</a></li>
-						<li><a href="./generatePDF.html">prontuarios</a></li>
-					</ul>
-				</nav>
 
 				<!-- menu hamburguer -->
 				<div class="menu-section on">
@@ -33,8 +26,14 @@
 						<div class="two"></div>
 						<div class="three"></div>
 					</div>
+					<nav>
+						<ul>
+							<li><a href="./home.html">Home</a></li>
+							<li><a href="./searche.html">Buscas</a></li>
+							<li><a class="generatePDF" href="./generatePDF.html">prontuarios</a></li>
+						</ul>
+					</nav>
 				</div>
-
 				<aside class="aside-padding">
 					<!-- <a href="#" class="config">configuração</a> -->
 					<input class="exit" type="button" value="Sair" onclick="exit()">
@@ -44,9 +43,7 @@
 
 
 		<form class="flex-row-form reset-form" name="putForm" method="put">
-
 			<div class="flex1-form">
-
 				<label for="cpf">CPF:</label>
 				<input class="input-cpf" type="search" name="cpf" required
 					placeholder="Consultar por CPF AQUI... pressione tab" id="cpf">
@@ -76,7 +73,6 @@
 			</div>
 
 			<div class="flex2-form">
-
 				<label for="sexo">Sexo:</label>
 				<input class="input-sexo" type="text" name="sexo" required id="sexo">
 
