--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 			<div class="container-header">
 
 				<!-- menu hamburguer -->
-				<div class="menu-section on">
+				<div class="menu-section ">
 					<div class="menu-toggle">
 						<div class="one"></div>
 						<div class="two"></div>
