css finished hamburger

--- a/home.html
+++ b/home.html
@@ -21,8 +21,14 @@
 		<header>
 			<div class="container-header">
 
+				
+				<aside class="aside-padding">
+					<!-- <a href="#" class="config">configuração</a> -->
+					<input class="exit" type="button" value="Sair" onclick="exit()">
+				</aside>
+
 				<!-- menu hamburguer -->
-				<div class="menu-section ">
+				<div class="menu-section">
 					<div class="menu-toggle">
 						<div class="one"></div>
 						<div class="two"></div>
@@ -36,10 +42,7 @@
 						</ul>
 					</nav>
 				</div>
-				<aside class="aside-padding">
-					<!-- <a href="#" class="config">configuração</a> -->
-					<input class="exit" type="button" value="Sair" onclick="exit()">
-				</aside>
+
 			</div>
 		</header>
 
@@ -114,6 +117,7 @@
 	</footer>
 
 	<script src="./src/assets/js/homeRefreshToken.js"></script>
+	<script src="./src/assets/js/responsiveHamburguer.js"></script>
 
 	<script src="./src/assets/js/allCount.js"></script>
 	<script src="./src/assets/js/cepFill.js"></script>
