--- a/searche.html
+++ b/searche.html
@@ -19,8 +19,13 @@
 		<header>
 			<div class="container-header">
 
+				<aside class="aside-padding">
+					<!-- <a href="#" class="config">configuração</a> -->
+					<input class="exit" type="button" value="Sair" onclick="exit()">
+				</aside>
+
 				<!-- menu hamburguer -->
-				<div class="menu-section on">
+				<div class="menu-section">
 					<div class="menu-toggle">
 						<div class="one"></div>
 						<div class="two"></div>
@@ -34,10 +39,6 @@
 						</ul>
 					</nav>
 				</div>
-				<aside class="aside-padding">
-					<!-- <a href="#" class="config">configuração</a> -->
-					<input class="exit" type="button" value="Sair" onclick="exit()">
-				</aside>
 			</div>
 		</header>
 
@@ -108,6 +109,8 @@
 
 
 	<!-- <script src="./src/assets/js/homeRefreshToken.js"></script> -->
+	<script src="./src/assets/js/responsiveHamburguer.js"></script>
+
 	<script src="./src/assets/js/allCount.js"></script>
 	<script src="./src/assets/js/getByCpf.js"></script>
 	<script src="./src/assets/js/putForm.js"></script>
