--- a/searche.html
+++ b/searche.html
@@ -35,7 +35,7 @@
 						<ul>
 							<li><a href="./home.html">Home</a></li>
 							<li><a href="./searche.html">Buscas</a></li>
-							<li><a class="generatePDF" href="./generatePDF.html">prontuarios</a></li>
+							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
 						</ul>
 					</nav>
 				</div>
