--- a/generatePDF.html
+++ b/generatePDF.html
@@ -53,8 +53,8 @@
 
         <div id="generatePDF">
             <header>
-                <h1 class="border">PRONTUÁRIO MÉDICO</h1>
                 <address>
+                    <h1 class="border">PRONTUÁRIO MÉDICO</h1>
                     <p> Associação de Articulação </p>
                     <p> Social dos Moradores </p>
                     <p> Comerciantes do Bairro de Peixinhos - AASCMBP</p>
@@ -65,7 +65,7 @@
                 </span>
             </header>
             <address>
-                <h3 class="border">DADOS DO PACIENTE:</h3>
+                <h3 class="border padding-top">DADOS DO PACIENTE:</h3>
                 <p> nome: </p>
                 <p class="inline-block-nasc"> data de nascimento:</p>
                 <p class="inline-block-sexo"> sexo:</p>
@@ -80,9 +80,9 @@
                 <p class="inline-block-cidade"> cidade:</p>
                 <p class="inline-block-bairro">bairro: </p>
                 <p> Fone: </p>
-                <h3 class="border info">INFORMAÇÕES DO PACIENTE:</h3>
+                <h3 class="border padding-top">INFORMAÇÕES DO PACIENTE:</h3>
             </address>
-            <p><span></span></p>
+            <p class="info"><span></span></p>
         </div>
     </div>
 
