--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>signin</title>
     <link rel="stylesheet" href="./src/assets/css/signin.css">
     <link rel="stylesheet" href="./src/assets/csserror/signin-error.css">
-    <link rel="stylesheet" href="./src/assets/css/load.css">
+    <link rel="stylesheet" href="./src/assets/css/loading.css">
 
      <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
 </head>
@@ -18,7 +18,7 @@
     <div class="pre"></div>
   </div>
   <div class="content">
-    <div class="border-auth center">
+    <div class="border-auth">
       <form class="form-signin">
         <h3>Login</h3>
         <input type="email" name="email" id="signin-email" placeholder="E-MAIL" data-rules="required|email">
