--- a/home.html
+++ b/home.html
@@ -39,6 +39,8 @@
 							<li><a href="./home.html">Home</a></li>
 							<li><a href="./searche.html">Buscas</a></li>
 							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
+							<li><a onclick="exit()">Sair</a></li>
+							
 						</ul>
 					</nav>
 				</div>
