include the exit link on the pages

--- a/searche.html
+++ b/searche.html
@@ -36,6 +36,7 @@
 							<li><a href="./home.html">Home</a></li>
 							<li><a href="./searche.html">Buscas</a></li>
 							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
+							<li><a onclick="exit()">Sair</a></li>
 						</ul>
 					</nav>
 				</div>
