--- a/generatePDF.html
+++ b/generatePDF.html
@@ -95,6 +95,7 @@
 
     <script src="./src/assets/js/generatePDF.js"></script>
     <script src="./src/assets/js/logged.js"></script>
+    <script src="./src/assets/js/exitPage.js"></script>
 </body>
 
 </html>
