--- a/home.html
+++ b/home.html
@@ -39,8 +39,7 @@
 							<li><a href="./home.html">Home</a></li>
 							<li><a href="./searche.html">Buscas</a></li>
 							<li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
-							<li><a onclick="exit()">Sair</a></li>
-							
+							<li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
 						</ul>
 					</nav>
 				</div>
@@ -125,6 +124,7 @@
 	<script src="./src/assets/js/cepFill.js"></script>
 	<script src="./src/assets/js/onSubmit.js"></script>
 	<script src="./src/assets/js/exitPage.js"></script>
+	<script src="./src/assets/js/exitMenuHamburguer.js"></script>
 	<script src="./src/assets/js/logged.js"></script>
 </body>
 
