--- a/generatePDF.html
+++ b/generatePDF.html
@@ -36,7 +36,7 @@
                             <li><a href="./home.html">Home</a></li>
                             <li><a href="./searche.html">Buscas</a></li>
                             <li><a class="generatePDF" href="./generatePDF.html">Prontuarios PDF</a></li>
-                            <li><a onclick="exit()">Sair</a></li>
+                            <li><input class="exitMenuHamburguer" type="button" value="Sair" onclick="exit()"></li>
                         </ul>
                     </nav>
                 </div>
@@ -96,6 +96,7 @@
     <script src="./src/assets/js/generatePDF.js"></script>
     <script src="./src/assets/js/logged.js"></script>
     <script src="./src/assets/js/exitPage.js"></script>
+    <script src="./src/assets/js/exitMenuHamburguer.js"></script>
 </body>
 
 </html>
