--- a/html.html
+++ b/html.html
@@ -183,16 +183,15 @@ footer span{
 color: aliceblue;
 }
 
-
-/* button exitMenuHamburguer */
 .exitMenuHamburguer{
+color: aliceblue;
+margin: auto;
 cursor: pointer;
 color: white;
-margin: auto;
 background:rgb(255, 0, 0);
-width: 40px;
-height: 18px;
-/* font-size: 1rem; */
+font-size: 20px;
+width: 50px;
+height: 25px;
 
 border-radius: 5px;
 border-top: none;
