--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="pre"></div>
   </div>
   <div class="content">
-    <div class="border-auth">
+    <div class="container-signin">
       <form class="form-signin">
         <h3>Login</h3>
         <input type="email" name="email" id="signin-email" placeholder="E-MAIL" data-rules="required|email">
         <input type="password" name="password" id="signin-password" placeholder="PASSWORD" data-rules="required|min=4">
         <input class="myButton input" type="submit" id="signin-btn-submit" value="Entrar">
-        <p>Não tem conta? <a href="/signup.html">Registre-se</a></p>
+        <p class="margin">Não tem conta? <a href="/signup.html">Registre-se</a></p>
       </form>
     </div>
   </div>
