remove file allCount.js

--- a/searche.html
+++ b/searche.html
@@ -112,7 +112,7 @@
 	<!-- <script src="./src/assets/js/homeRefreshToken.js"></script> -->
 	<script src="./src/assets/js/responsiveHamburguer.js"></script>
 
-	<script src="./src/assets/js/allCount.js"></script>
+	<!-- <script src="./src/assets/js/allCount.js"></script> -->
 	<script src="./src/assets/js/getByCpf.js"></script>
 	<script src="./src/assets/js/putForm.js"></script>
 	<script src="./src/assets/js/exitPage.js"></script>
