inputs form  type=button

--- a/searche.html
+++ b/searche.html
@@ -47,59 +47,61 @@
 		<form class="flex-row-form reset-form" name="putForm" method="put">
 			<div class="flex1-form">
 				<label for="cpf">CPF:</label>
-				<input class="input-cpf" type="search" name="cpf" required
+				<input class="input-cpf" type="search" name="cpf" 
 					placeholder="Consultar por CPF AQUI... pressione tab" id="cpf">
 
 				<label for="name_full">Nome completo:</label>
-				<input class="input-name" type="text" name="name" required id="name">
+				<input class="input-name" type="text" name="name"  id="name">
 
 				<label for="data_nascimento">Data de nascimento:</label>
-				<input class="input-nasc" type="text" name="nascimento" required id="nascimento">
+				<input class="input-nasc" type="text" name="nascimento"  id="nascimento">
 
 				<label for="name_mae">Nome da mãe:</label>
-				<input class="input-mae" type="text" name="mae" required id="mae">
+				<input class="input-mae" type="text" name="mae"  id="mae">
 
 				<label for="bairro">Bairro:</label>
-				<input class="input-bairro" type="text" name="bairro" required id="bairro">
+				<input class="input-bairro" type="text" name="bairro"  id="bairro">
 
 				<label for="cep">CEP:</label>
-				<input class="input-cep" type="text" name="cep" required maxlength="9" id="cep">
+				<input class="input-cep" type="text" name="cep"  maxlength="9" id="cep">
 
 				<label for="endereco">Endereço:</label>
-				<input class="input-endereco" type="text" name="endereco" required id="endereco">
+				<input class="input-endereco" type="text" name="endereco"  id="endereco">
 
 				<!-- textarea -->
 				<label for="obs">Descrição:</label>
-				<textarea class="input-descricao" name="descricao" cols="30" rows="10" required
+				<textarea class="input-descricao" name="descricao" cols="30" rows="10" 
 					placeholder="descrição do paciente" style="resize: none" id="descricao"></textarea>
 			</div>
 
 			<div class="flex2-form">
 				<label for="sexo">Sexo:</label>
-				<input class="input-sexo" type="text" name="sexo" required id="sexo">
+				<input class="input-sexo" type="text" name="sexo"  id="sexo">
 
 				<label for="data_Emissao">Data de emissão:</label>
 				<input class="input-emissao" type="text" name="dataemissao" id="dataemissao">
 
 				<label for="RG">RG:</label>
-				<input class="input-rg" type="text" name="rg" required id="rg">
+				<input class="input-rg" type="text" name="rg"  id="rg">
 
 
 				<label for="cartao do sus">Cartão do sus:</label>
-				<input class="input-sus" type="text" name="sus" required id="sus">
+				<input class="input-sus" type="text" name="sus"  id="sus">
 
 				<label for="cidade">Cidade:</label>
-				<input class="input-cidade" type="text" name="cidade" required id="cidade">
+				<input class="input-cidade" type="text" name="cidade"  id="cidade">
 
 				<label for="uf">UF:</label>
-				<input class="input-uf" type="text" name="uf" required id="uf">
+				<input class="input-uf" type="text" name="uf"  id="uf">
 
 				<label for="fone">Fone:</label>
-				<input class="input-fone" type="text" name="fone" required id="fone">
+				<input class="input-fone" type="text" name="fone"  id="fone">
 
 				<!-- button submit -->
 				<div class="flex3-submit">
-					<input class="input-submit" type="submit" value="EDITAR" id="signin-btn-submit">
+					<input class="input-submit" type="button" value="ATUALIZAR" id="signin-btn-submit">
+					<input class="input-submit" type="button" value="BUSCAR">
+
 				</div>
 			</div>
 		</form>
