--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./src/assets/css/reset.css">
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
+	<link rel="stylesheet" href="./src/assets/css/buttonInputSubmit.css">
 	<link rel="stylesheet" href="./src/assets/csserror/cpf-error.css">
 
 	<!-- <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'> -->
@@ -106,7 +107,7 @@
 				<input class="input-fone" type="text" name="fone"  placeholder="Fone" required>
 
 				<!-- button submit -->
-				<input class="input-submit" type="submit" value="ENVIAR">
+				<input class="input-submit button" type="submit" value="ENVIAR">
 
 			</div>
 		</form>
