--- a/searche.html
+++ b/searche.html
@@ -10,6 +10,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./src/assets/css/reset.css">
 	<link rel="stylesheet" href="./src/assets/css/styles.css">
+	<link rel="stylesheet" href="./src/assets/css/buttonUpData.css">
 
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
@@ -99,8 +100,8 @@
 
 				<!-- button submit -->
 				<div class="flex3-submit">
-					<input class="input-submit" type="button" value="ATUALIZAR" id="signin-btn-submit">
-					<input class="input-submit" type="button" value="BUSCAR">
+					<input class="input-submit1" type="button" value="BUSCAR">
+					<input class="input-submit2" type="button" value="ATUALIZAR" id="signin-btn-submit">
 
 				</div>
 			</div>
