--- a/searche.html
+++ b/searche.html
@@ -100,8 +100,8 @@
 
 				<!-- button submit -->
 				<div class="flex3-submit">
-					<input class="input-submit1" type="button" value="BUSCAR">
-					<input class="input-submit2" type="button" value="ATUALIZAR" id="signin-btn-submit">
+					<button class="input-submit1" type="button" >BUSCAR</button>
+					<button class="input-submit2" type="button" value="ATUALIZAR" id="signin-btn-submit">ATUALIZAR</button>
 
 				</div>
 			</div>
