error.response.status === 409

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <form class="form-signin">
         <h3>Login</h3>
         <input type="email" name="email" id="signin-email" placeholder="E-MAIL" data-rules="required|email">
+        <div class="email-error"></div>
         <input type="password" name="password" id="signin-password" placeholder="PASSWORD" data-rules="required|min=4">
         <input class="myButton input" type="submit" id="signin-btn-submit" value="Entrar">
         <p class="margin">Não tem conta? <a href="/signup.html">Registre-se</a></p>
